--- a/app_admin/templates/index.html
+++ b/app_admin/templates/index.html
@@ -9,7 +9,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TRIAL</h1>
-    <img src="{% static 'images/fblogo.jpg' %}">
+    <form>
+        <div class="container">
+            <label><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="uname" required>
+        
+            <label><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="pass" required>
+        
+            <button type="submit">Login</button>
+            <label>
+              <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>
+        </div>
+    </form>
 </body>
 </html>
