--- a/app_admin/templates/index.html
+++ b/app_admin/templates/index.html
@@ -6,22 +6,158 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hangover.</title> 
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- <link rel="stylesheet" href="cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"> -->
+
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
+
 </head>
 <body>
-    <form>
-        <div class="container">
-            <label><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
-        
-            <label><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="pass" required>
-        
-            <button type="submit">Login</button>
-            <label>
-              <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label>
+    
+    <section class="thala">
+        <nav>
+            <h1><a href="index.html"></a>hangover.</h1>
+            
+            <div class="nav-links">
+                <ul>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="#abt">ABOUT</a></li>
+                    <li><a href="#cnt">CONTACT US</a></li>
+                    <li><a href="{% url 'loginpage' %}">LOG IN</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="text-box">
+            <h1>Take your Portfolio to new heights.</h1>
+            <p>Community for creatives to share, grow, and get hired.</p>
+            <a href="{% url 'signinpage' %}" class="get-btn">GET STARTED</a>
+        </div> 
+    </section>
+
+    <section class="description">
+        <h3>Discover the top designers, creatives & more</h3>
+        <p>Portfolios and innovative work by leading <br>creative talent sourced from community.</p>
+
+        <div class="row">
+            <div class="desc-col">
+                <h2>Film maker</h2>
+            </div>
+            <div class="desc-col">
+                <h2>Artist</h2>
+            </div>
+            <div class="desc-col">
+                <h2>Photographer</h2>
+            </div>
+            <div class="desc-col">
+                <h2>Designer</h2>
+            </div>
         </div>
-    </form>
+        <div class="row1">
+            <div class="desc-col">
+                <h2>Agencies & Studios</h2>
+            </div>
+            <div class="desc-col">
+                <h2>Stylist & Models</h2>
+            </div>
+            <div class="desc-col">
+                <h2>Developers</h2>
+            </div>
+            <div class="desc-col">
+                <h2>&more.</h2>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="about" id="abt">
+        <br>
+        <h1 id="abth1">Why choose us?</h1>
+        
+        <p id="abtp">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Sit veritatis eaque tenetur repellendus quidem? Quaerat debitis temporibus doloribus possimus, 
+            facilis vero atque quo laudantium recusandae ab magnam! Sed, rem tenetur!
+        </p>
+
+    </section>
+
+    <section id="cnt">
+        <h6 id="cnth1">Contact US</h6>
+    </section>
+
+    <section id="contact">
+        <div class="getin">
+            <h2 id="cnth">Get in touch</h2>
+            <p>Looking for help? Fill the from and start a new adventure.</p>
+
+            <div class="getin-details">
+                <h3 id="cnth3">Headquaters</h3>
+                <div>
+                    <i class="far fa-home get"></i>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                <h3 id="cnth3">Phone</h3>
+                <div>
+                    <i class="fas fa-phone-alt get"></i>
+                    <p>24841684161#</p>
+                </div>
+                <h3 id="cnth3">Support</h3>
+                <div>
+                    <i class="fal fa-envolope-open-text get"></i>
+                    <p>####@gmail.com</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="form">
+            <h4 id="cnth4">Lets Connect</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <br>
+            <div class="form-row">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Email">
+            </div>
+            <br>
+            <div class="form-col">
+                <textarea name="" id="" cols="30" rows="8" placeholder="How can we help?"></textarea>
+            </div>
+            <br>
+            <div class="form-col">
+                <button>Send message</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d250436.58636260143!2d75.
+        67072522593746!3d11.256138714660189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+        1!3m3!1m2!1s0x3ba65938563d4747%3A0x32150641ca32ecab!
+        2sKozhikode%2C%20Kerala!5e0!3m2!1sen!2sin!4v1645999152022!5m2!1sen!2sin" 
+         style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
+    
+    <section class="kal">
+        <h4>hangover.</h4>
+
+        <div class="icon">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-whatsapp"></i>
+        </div>
+    </section>
+
+
 </body>
 </html>
